@@ -1,6 +1,6 @@
 # English strings for fractions
 fractions-intro.name=Fractions Intro
-fraction-matching-game.name=Fraction Matching Game
+fraction-matcher.name=Fraction Matcher
 myFractions=My Fractions
 numbers=Numbers
 pictures=Pictures
