@@ -3,4 +3,4 @@ project.depends.data=data
 project.depends.source=src
 project.depends.lib=piccolo-phet : functionaljava : lombok/lombok.jar : xstream : games
 project.flavor.fractions-intro.mainclass=edu.colorado.phet.fractionsintro.FractionsIntroApplication
-project.flavor.fractions-matching-game.mainclass=edu.colorado.phet.fractionmatchinggame.FractionMatchingGameApplication
+project.flavor.fractions-matching-game.mainclass=edu.colorado.phet.fractionmatchinggame
