@@ -1,3 +1,4 @@
+Renamed "Fraction Matching Game" to "Fraction Matcher"
 Added new sim for "Fraction Matching Game"
 # 0.00.72 (64542) May 31, 2012
 Build a fraction tab: Block against unnecessary repainting for target cell highlighting
